documentation(jar): descreve melhor como executar o jar em windows e linux